[tool.poetry]
name = "Cloudy-the-Discord-Bot"
version = "0.1.0"
description = "A friendly Discord bot designed to help out with various tasks."
authors = ["Andrew Liu"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
discord-py-slash-command = "^1.2.0"
openai = "^0.6.4"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
